[FIX] emitting changed styleProperty from child component form back to parent, to check for already existing mappings and displaying alert correctly. Editing still broken. Starting on that now

--- a/src/app/components/main-mappings-new/main-mappings-new.component.html
+++ b/src/app/components/main-mappings-new/main-mappings-new.component.html
@@ -80,7 +80,7 @@
 
       <!-- FORM -->
       <app-main-mappings-new-form *ngIf="discreteMapping"
-                                  [styleProperty]="styleProperty"
+                                  (stylePropertyEmitter)="setStyleProperty($event)"
                                   [isEdit]="isEdit"
                                   [mapType]="'nd'"
                                   [mapId]="currentMappingId"
@@ -134,7 +134,7 @@
 
       <!-- FORM -->
       <app-main-mappings-new-form *ngIf="continuousMapping"
-                                  [styleProperty]="styleProperty"
+                                  (stylePropertyEmitter)="setStyleProperty($event)"
                                   [isEdit]="isEdit"
                                   [mapType]="'nc'"
                                   [mapId]="currentMappingId"
@@ -181,7 +181,7 @@
 
       <!-- FORM -->
       <app-main-mappings-new-form *ngIf="discreteMapping"
-                                  [styleProperty]="styleProperty"
+                                  (stylePropertyEmitter)="setStyleProperty($event)"
                                   [isEdit]="isEdit"
                                   [mapType]="'ed'"
                                   [mapId]="currentMappingId"
@@ -234,7 +234,7 @@
       </div>
 
       <app-main-mappings-new-form *ngIf="continuousMapping"
-                                  [styleProperty]="styleProperty"
+                                  (stylePropertyEmitter)="setStyleProperty($event)"
                                   [isEdit]="isEdit"
                                   [mapType]="'ec'"
                                   [mapId]="currentMappingId"
