[DONE] reworked routing module, consolidating nomenclature of query params and avoiding redundant params

--- a/src/app/components/main-mappings-new/main-mappings-new.component.html
+++ b/src/app/components/main-mappings-new/main-mappings-new.component.html
@@ -86,7 +86,7 @@
                                   [mapId]="currentMappingId"
                                   [isEdit]="isEdit"
                                   [propertyToMap]="propertyToMap"
-                                  [propertyPointer]="propertyIdEdit"></app-main-mappings-new-form>
+                                  [propertyPointer]="propertyId"></app-main-mappings-new-form>
 
     </div>
 
@@ -143,8 +143,7 @@
                                   [typeHint]="typeHint"
                                   [mapId]="currentMappingId"
                                   [propertyToMap]="propertyToMap"
-                                  [propertyPointer]="propertyIdEdit"></app-main-mappings-new-form>
-
+                                  [propertyPointer]="propertyId"></app-main-mappings-new-form>
 
     </div>
 
@@ -192,7 +191,7 @@
                                   [typeHint]="typeHint"
                                   [mapId]="currentMappingId"
                                   [propertyToMap]="propertyToMap"
-                                  [propertyPointer]="propertyIdNew"></app-main-mappings-new-form>
+                                  [propertyPointer]="propertyId"></app-main-mappings-new-form>
     </div>
 
     <!-- NEW: EdgesContinuous -->
