--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -119,7 +119,7 @@
               class="btn btn-lg btn-block btn-success mt-2 mb-2" data-toggle="tooltip"
               ngbTooltip="{{'SIDEBAR_EDIT_TT_MANAGE_MAPPINGS' | translate}}"
               placement="bottom">
-        <fa-icon [icon]="" class="mr-2"></fa-icon>
+        <fa-icon [icon]="faPalette" class="mr-2"></fa-icon>
         {{'SIDEBAR_EDIT_MANAGE_MAPPINGS' | translate}}
       </button>
 
