--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <div class="container-fluid">
 
-  <div [ngClass]="'width-' + widthMain" class="float-left">
+
+  <div [ngClass]="(layoutIsMainLeft ? 'float-left' : 'float-right')" class="width-{{widthMain}} pl-2">
     <router-outlet></router-outlet>
   </div>
 
-  <div [ngClass]="'width-' + widthSidebar" class="vh-100 float-right">
+  <div [ngClass]="(layoutIsMainLeft ? 'float-right' : 'float-left')" class="vh-100 width-{{widthSidebar}}">
 
     <ul class="nav nav-tabs mt-2 ml-1 mr-1">
       <li class="nav-item">
