--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
 
 
-  <div [ngClass]="(layoutIsMainLeft ? 'float-left' : 'float-right')" class="width-{{widthMain}} pl-2">
+  <div [ngClass]="(layoutIsMainLeft ? 'float-left width-' + widthLeft : 'float-right width-' + widthRight)" class="pl-2">
     <router-outlet></router-outlet>
   </div>
 
-  <div [ngClass]="(layoutIsMainLeft ? 'float-right' : 'float-left')" class="vh-100 width-{{widthSidebar}}">
+  <div [ngClass]="(layoutIsMainLeft ? 'float-right width-' + widthRight : 'float-left width-' + widthLeft)" class="vh-100">
 
     <ul class="nav nav-tabs mt-2 ml-1 mr-1">
       <li class="nav-item">
