--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,15 @@
 .drag-bar {
-  background-color: #d8d8d8;
-  cursor: pointer;
-  width: 1%;
+  background-color: #f1f1f1;
+  width: 32px;
   min-height: 100%;
 }
 
-.drag-bar:hover {
-  background-color: green;
+.btnLayout {
+  display: none;
+
+  .drag-bar:hover & {
+    display: block;
+  }
 }
 
 .width-8 {
